--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://TharakaRajasekara.github.io",
+  "homepage": "https://github.com/TharakaRajasekara/rajasekara.github.io",
   "name": "yt-portfolio",
   "version": "0.1.0",
   "private": true,
