--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/TharakaRajasekara/TharakaRajasekara.github.io.git/",
+  "homepage": "https://tharakarajasekara.github.io/",
   "name": "yt-portfolio",
   "version": "0.1.0",
   "private": true,
